Phone align fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -115,7 +115,7 @@ p {
 }
 
 @media (max-width: 1028px) {
-  #title {
+  #title .row{
     text-align: center;
   }
 
